<resources>
    <string name="app_name">Farmers Zone</string>
    <string name="category">Select Category</string>
    <string name="fruits">FRUITS</string>
    <string name="nuts">NUTS</string>
    <string name="herbs">HERBS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_about">About</string>
    <string name="search">SEARCH</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_to_start">Click Here To Start</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
</resources>