<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <activity
        android:id="@+id/nav_home"
        android:name="com.farmersgroup.farmerszone.ui.MainActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main2" />

    <activity
        android:id="@+id/nav_account"
        android:name="com.farmersgroup.farmerszone.ui.MyUserFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/nav_search"
        android:name="com.farmersgroup.farmerszone.ui.BrowseAllActivity"
        android:label="Search"
        tools:layout="@layout/activity_browse_all" />

    <activity
        android:id="@+id/nav_about"
        android:name="com.farmersgroup.farmerszone.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>